# project-python

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  agent.py  main.py  pyproject.toml  setup.bat  setup.sh
architecture/: arc.txt
cv_extractor/: __init__.py  extractor.py
docs/: ARCHITECTURE.md  EXAMPLES.md
docs/plans/: 2026-03-02-agent-hub-design.md
git_review_agent/: cli.py
history/: 20260226-230425-agent.py-agent-test-vs-main.md  20260226-231229-agent.py-agent-test-vs-main.md  20260226-231355-agent.py-agent-test-vs-main.md  20260302-110816-cli.py-test-functionality-vs-main.md
prompt/: prompt.py
scripts/: agent_git_diff.py
